# ChangeLog for app-shells/dash
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/dash/ChangeLog,v 1.98 2012/06/17 18:15:42 armin76 Exp $

  17 Jun 2012; Raúl Porcel <armin76@gentoo.org> dash-0.5.7.1.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #416929

  28 May 2012; Markus Meier <maekke@gentoo.org> dash-0.5.7.1.ebuild:
  arm stable, bug #416929

  24 May 2012; Jeroen Roovers <jer@gentoo.org> dash-0.5.7.1.ebuild:
  Stable for HPPA (bug #416929).

  23 May 2012; Brent Baude <ranger@gentoo.org> dash-0.5.7.1.ebuild:
  Marking dash-0.5.7.1 ppc64 for bug 416929

  22 May 2012; Brent Baude <ranger@gentoo.org> dash-0.5.7.1.ebuild:
  Marking dash-0.5.7.1 ppc for bug 416929

  21 May 2012; Agostino Sarubbo <ago@gentoo.org> dash-0.5.7.1.ebuild:
  Stable for amd64, wrt bug #416929

  21 May 2012; Jeff Horelick <jdhore@gentoo.org> dash-0.5.7.1.ebuild:
  marked x86 per bug 416929

  02 May 2012; Jeff Horelick <jdhore@gentoo.org> dash-0.5.5.1.7.ebuild,
  dash-0.5.7.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  01 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> dash-0.5.5.1.7.ebuild:
  ppc64 stable wrt #383015

  30 Oct 2011; Raúl Porcel <armin76@gentoo.org> dash-0.5.5.1.7.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #383057

  23 Oct 2011; nixnut <nixnut@gentoo.org> dash-0.5.5.1.7.ebuild:
  ppc stable #383015

  05 Oct 2011; Markus Meier <maekke@gentoo.org> dash-0.5.5.1.7.ebuild:
  arm stable, bug #383015

  21 Sep 2011; Jeroen Roovers <jer@gentoo.org> dash-0.5.5.1.7.ebuild:
  Stable for HPPA (bug #383015).

  19 Sep 2011; Andreas Schuerch <nativemad@gentoo.org> dash-0.5.5.1.7.ebuild:
  x86 stable, thanks Myckel. Bug 383015

  16 Sep 2011; Tony Vroon <chainsaw@gentoo.org> dash-0.5.5.1.7.ebuild:
  Marked stable on AMD64 based on arch testing by Ian "idella4" Delaney &
  Agostino "ago" Sarubbo in bug #383015.

*dash-0.5.7.1 (15 Sep 2011)
