@@ -1,11 +1,33 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX dash-0.5.5.1-octal.patch 628 SHA256 06741af243014a22ba1b530a5d4e4abd70b944dcb16f9e1ed86290745ff3dbd0 SHA512 cf5764ef60a4a36aff532b2182d76c59746134126b57444f77169be499f21334aebffa4a7db2bd83a6f6be66bd968630351be579b47fbbab1c2876e68126db4b WHIRLPOOL 653bda3038e10bf6e04d0636afcf3177d23023749e20192137eaa8cc1d1c8f8a046f55b9009a896b55c99c60af249ba5d536032e016b3c801440c051ebf2e5ff
 DIST dash-0.5.5.1.tar.gz 208094 SHA256 1c6717a1014c73aa16bc78a4767f1e00b40ff2a01a6c2cf2cce9a5335c24493f SHA512 2beab4575808ab9855c13397b25c89e42fd78ea43b1bc11f69e064f4dbe807216012732b01ba5f1177c83b9c31dc9e994ba2a75471bb209ce06b051bec74110c WHIRLPOOL ec6741e41b30388b351d81d2cada4750a73779ea862ee381e4bb8754069ae4db78bc9a97a13d02324fa854e465f12d93ac3080ed1126f64a3dc88fa2c1894a2a
 DIST dash-0.5.7.tar.gz 223794 SHA256 ae89fa9f1145b7748cf0740e1df04cd52fdf8a285da4911dd0f04983efba4e39 SHA512 77ad016fa5fb3fcb0d940b29d3fa914f546d79cdf2221ed47e4dec6d3a005b25d2d32ee1fdd4f662a7a84274572b72235b82e4c39995c7ca0bb049a7d88595b5 WHIRLPOOL cc11d46a76aa201cb02c4f58e6b1b77fe859d34d7f8b6e6320263a2446dc4d229549823e6628875e0caa21a90fe3743026ba5809ba1a78788d8dd9c94207aa48
 DIST dash_0.5.5.1-2.diff.gz 30224 SHA256 fd5bf5db5719804b1f8b49911b07de66ec18d3a3312ba5c3c233a888823f1739 SHA512 95733f9ab72a1d50ba4c6e3ba0804a451a0de07a3c23269b2b54660ebb4ce727a5b1c917e079aae7ad376ffdbb8d183f23aee99749300c959bc91d05f9fa53fa WHIRLPOOL 25323257f40620e2e0a062cc15d92e6c03f3da88968c423ce966aaf0ce361eccf5f092c8cb8c8ce8551e7315da1fcf2cad190b3e076d15c2761435d84e2937db
 DIST dash_0.5.5.1-7.diff.gz 48211 SHA256 aea83843e9e7ab15d642237081d229b3ab44ca33b9565efcdc637865053a32ba SHA512 f8e459ed799204ba9ac12ababc53065b85c0cbc5e3f95e14b767d2eaa5d518b14bc60aeeb1aa6d20e76544953c076bb85137832aa388cf45b7d7170d37ed4fc8 WHIRLPOOL d33d75ab7b4ef140061e1d00dbdb073e7f204d60c76c653cfe9240c3511b93012472b92fe22dec4c752414faedbe4aaac696e022d3a4f7985c3c425bcef64e2e
 DIST dash_0.5.7-1.diff.gz 39151 SHA256 d928ac4862dcea1b796a517709d3a102e23f812c14e9e6f9dc3d3ad7d4d7b6f4 SHA512 f793ba9a34801a111e1112fb15629c2897da0002da7bf59b881873a2f4e4ca28a17d07eebaecf528cb26fbe7ba45bf719b0faaa5ecc9076934c879818004a29d WHIRLPOOL efaa43bafd425abab32f861ae5d1ce919cef120fa14b61d94eec20937447c8109504270c3eaa8089d93c633c6e29be1e27fc4f8e1273e706afe5229a03298d92
+DIST dash_0.5.7-3.diff.gz 41631 SHA256 ee6aa93c49487e699286347ee5709efdfd7e040b02c85b467e629bb457cdfee7 SHA512 db82213a0e9ab96139931586e59ca9cc17d819a6f7897cb2e86106fe414f868164bcb1353296e2d7d30582ab2ea4c8d441ba4f46c08028e9a875674f001f83f1 WHIRLPOOL ac368be55af0effb746b0d7fd3ab80eb1a1adf15542862ba1ddabc27e46554ed62d0f858076efe71a6a166738f0692d70f36234f154f6b3965fc1e9422a11117
 EBUILD dash-0.5.5.1.2.ebuild 1608 SHA256 1f3b0aa4a64fdedc1b58bfb0e2e71c269698e414bed4a610d880a846da6c031e SHA512 ff628a46f57f36fda8abef1336b869a8eba9cab627446ef84e82cded1d7c01b8d61529f4e1c0fc5a2f78edd409f37af25df38f50c3496bd99a5e408a6dc73091 WHIRLPOOL 1b7ac619d40c93640f9df4c804b939b358e18e4a721c12c4e62b4e8710a91637d3efceeaad81742304ee638f49554544fc562eef00fb509a9480ff6849dbde61
 EBUILD dash-0.5.5.1.7.ebuild 1604 SHA256 d2f214cb22acb0d8bb06756983975c3a38691841bab7cd22ae2db0f5911b0d1e SHA512 fe547e90d5a80f62831cd8949ed781c0584ee8a2c7b598fd2455c76158a9c43d70c6c183539a0d1bdc26d4193900263d0a2e02232a5f652ca70eea8035ab6c18 WHIRLPOOL 35705ceed48f882c014c2c5de497d84c21c3c3f1f6ada7127cf13ff4b96c515fe8a16367dc66c88dce2c128bb809484b38f2c09109a4c46b5d44242c7e76fcce
 EBUILD dash-0.5.7.1.ebuild 1602 SHA256 e1780ed88c9a306ec7c51e1b43524c862cb3ce78fc3e384e95accfad283a7f95 SHA512 472f42be4a18d27e669d93f713c71d2dd687c5f364b8d12ec33e8c0a72fd8f9487e62995447a060f604fdf67df0f6a8477307c1f9249966e55d9db28b170f960 WHIRLPOOL 20719e6175e54c182c1326c544d9f951b9aeaeab0ea84eb314b46a562cac8d166797b292c3d57cc0b115ee9f554d560be444766e8bcb590c52a6b69bd3b6892f
-MISC ChangeLog 13268 SHA256 a1acd4c63758424bcebbad6b562ac4788887031faecc9800b22624b9e7bcc33e SHA512 458a18a5ce63b8ee99fe1ced053445a871d163be0e66616c8e83088eea5405fca2932788964da8d6d85509f5b1ad76ed82c589e65eec19022965fe65ca0f7bb2 WHIRLPOOL b843ff0abafdbe0f033945e1dc164a87602ea571aeea294907a6a2686cbcfa852ba877ae09ca253c2752e3f2439fa6b140ff1751ec81234e49bb747507534832
+EBUILD dash-0.5.7.3.ebuild 1609 SHA256 21caee87c8fb52dfbb4257e5124dbdac037be9e0ca15b657d3d9d183b8cfb8d8 SHA512 507c20f9f2a1d023e0ceec9115d261251f4ad979f0d1ef3e53daf6b4172fde7ab713200ffe32fc92f1fa99210722999ef11600c39267226ad6189fedf6d6b000 WHIRLPOOL dfe0bbb9b626e740126969ae66f23cdb0fa842a9b7885656a9dbfd9a918b85515e70bbc64b079f6bf4879f7ee85447d670d1a5977be5a89e37469411324b3295
+MISC ChangeLog 13403 SHA256 e2825f6e18925fd88ad837dd84e148414d2f7bea09a66b9ce483a9549f7482ee SHA512 72a9fae9a81e394fd5aa2e2a3cb61a1ea571e486a196acc8ac323e3412bc5423200776e1a73784b64e38252597965028bbd79930d5d7a8c1a7e015c173e3bc38 WHIRLPOOL e537882c447dc689cd65e4d52e8aec34978282506a919b5bc989de78390f4470080970047142a3a43012ad8bedd48ca694270d73d3d35fe6dfd8f2310646f93d
 MISC metadata.xml 165 SHA256 23a8851c12bd4cf7cf0528250ad5605be6b0780bbec0c51331d6d2c618c13f6a SHA512 3f1bee5d098a4e5874df3af56169397cc3ed526f9c56004b9ccaa4c5cf02d4affd894400b88f50f3c19bf5ba3ae06f3d4d2cfa5c15e97b7d4c33053e5f0f63c5 WHIRLPOOL 070ba3ff0b1ea000c90d8af13cdac14693dc5d9dcc8d8ba89cf9bdbe91196e3cf9e72bd2f01cd5efc1ddab63b83184159298d1ee891bc123107ea6891ad612d2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCAAGBQJQmhacAAoJELEHsLL7fEFWSFMP/0i+5YxXirnezhD0rikFAUg5
+zzfsjHV0N0tU9MDS8EXab8R3nypIPTwlz/7o70bYpvRfuDPXOTJsfTr1BqaCxKUm
+OGgHMN1qMxYGA24ye+4d8ijjaw8UJSHu+bbbUH/7a2017HkO6/39ICedMpk4odh8
+KMKTKIIjo5Jh0isAFkqDznsnkzmmPYfVkdwiUZzRddXp2YbrRN6X5Ytsbj0mG+hQ
+uv7UQ1RqYLAmrw2sKMgObzAV7r67NWCmZ4ocYmrQemrwPWD7Q+VZW9BL64Pwnwpc
+IcldHrRgJCz6+uEWRw23E2X43LZdCX5biNk4ozTx5bvP4udHoL26VzbIh/xyZ9TF
+9DBDwHkuE39gRxT1A0quGBMwU8t+dkCJe/hKuHEB4Z6JayC1fgT3QMxfU+nmy2pd
+ocsNf/CWtuqqEVQIcp/wvi7I9P2waVe/45/w+z01QOsLou/SEh/dBGqSAo2NL25o
+NdgOwR5iIycCiSFKnf4Rt93ckn+Pcw0hWzzWv6CNv5/xUa+P0pad7VQHAuI06UHB
+1+p0CceuwooEgoDzP15bFXet5Y0TTU0KtVKTtmvX0EIye0rmFKhy1sH1jX2te4ZV
+Gd4azIk3zaDTpaKjeXyDJbstlVHTRHJx9lCJp/lxfuA2TKD77g6Aq+Ir+X6hqqHz
+CYuNjVnkc27igb/8gLrV
+=cZvt
+-----END PGP SIGNATURE-----
