@@ -1,6 +1,11 @@
 # ChangeLog for app-shells/dash
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/dash/ChangeLog,v 1.98 2012/06/17 18:15:42 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/dash/ChangeLog,v 1.99 2012/11/07 08:06:01 vapier Exp $
+
+*dash-0.5.7.3 (07 Nov 2012)
+
+  07 Nov 2012; Mike Frysinger <vapier@gentoo.org> +dash-0.5.7.3.ebuild:
+  Version bump and move to EAPI 4.
 
   17 Jun 2012; Raúl Porcel <armin76@gentoo.org> dash-0.5.7.1.ebuild:
   alpha/ia64/s390/sh/sparc stable wrt #416929
@@ -391,4 +396,3 @@
   26 Mar 2004; Seemant Kulleen <seemant@gentoo.org> dash-0.4.24.ebuild:
   this is the debian verison of NetBSDs ash. ebuild submitted by: Thomas Eckert
   <eckert.thomas@gmx.net> in bug #26253
-
